--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script/script.js" defer></script>
 </head>
 
 <body>
-    <p class="new"></p>
-    <script src="script/script.js" async defer></script>
+    <p class="new" style="color: red;"></p>
+
 </body>
 
 </html>
