--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="script/script.js" defer></script>
 </head>
 
 <body>
     <p class="new" style="color: red;"></p>
-
+    <p class="new-1" style="color: blue;"></p>
+    <p class="new-2" style="color: purple;"></p>
 </body>
 
 </html>
