--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="script/script.js" defer></script>
+    <link rel="stylesheet" type="" href="style.css">
+    <script src="script/scripts.js" defer></script>
+
 </head>
 
 <body>
-    <p class="new" style="color: red;"></p>
-    <p class="new-1" style="color: blue;"></p>
-    <p class="new-2" style="color: purple;"></p>
+	<h1>Привет Анонимный пользователь!</h1>
+	<div class='button'>
+	<button class='reg'>Зарегистрировать пользователя</button>
+	<button class='autores'>Авторизоваться</button>
+</div>
+<ul class="new">
+	<!-- <li class="new"> </li> -->
+
+</ul>
+ 
+   
 </body>
 
 </html>
