--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="" href="style.css">
-    <script src="script/scripts.js" defer></script>
+    <script src="script/script.js" defer></script>
 
 </head>
 
 <body>
-	<h1>Привет Анонимный пользователь!</h1>
-	<div class='button'>
-	<button class='reg'>Зарегистрировать пользователя</button>
-	<button class='autores'>Авторизоваться</button>
-</div>
-<ul class="new">
-	<!-- <li class="new"> </li> -->
+	<div class="div">
+<div class="code-color">#ffffff</div>
+<button class="button">Нажми меня</button>
 
-</ul>
+</div>
+
  
    
 </body>
