--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
-    <p class="new" style="color: red;"></p>
-    <p class="new-1" style="color: blue;"></p>
-    <p class="new-2" style="color: purple;"></p>
+   
+   	<img src="mid_14262_3313.jpg" width="100" alt="" class="cat">
+   <button class="button">Жми меня</button>
+   <button class="button">Reset</button>
+  <!--  
+   <div class="1">
+   	<img src="" alt="">
+   </div> -->
 </body>
 
 </html>
